--- a/css/ccu.css
+++ b/css/ccu.css
@@ -21,3 +21,12 @@
     
     background-color: rebeccapurple;
 }
+.reg-btn{
+    font-size: 10px;
+    border: 2px solid #04AA6D;
+}
+.reg-btn:hover{
+    font-size: 12px;
+    transition: 0.3s;
+    border: 2px solid #deee02;
+}
