--- a/css/style.css
+++ b/css/style.css
@@ -577,31 +577,31 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -o-transition: .3s all ease;
     transition: .3s all ease; }
   .sticky-wrapper .site-navbar .site-menu-toggle {
-    color: #000000; }
+    color: #6bb8c5; }
   .sticky-wrapper .site-navbar .site-logo a {
-    color: #000000; }
+    color: #6bb8c5; }
   .sticky-wrapper .site-navbar .site-menu > li > a {
-    color: rgba(0, 0, 0, 0.8) !important; }
+    color: 6bb8c5(0, 0, 0, 0.8) !important; }
     .sticky-wrapper .site-navbar .site-menu > li > a:hover, .sticky-wrapper .site-navbar .site-menu > li > a.active {
-      color: #000000 !important; }
+      color: #6bb8c5 !important; }
   .sticky-wrapper.is-sticky .burger:before, .sticky-wrapper.is-sticky .burger span, .sticky-wrapper.is-sticky .burger:after {
-    background: #000000;
+    background: transparent;
     -webkit-transition: .0s all ease;
     -o-transition: .0s all ease;
     transition: .0s all ease; }
   .sticky-wrapper.is-sticky .site-navbar {
-    background: #000000;
+    background: transparent;
     border-bottom: 1px solid transparent;
-    -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
-    box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1); }
+    /* -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);*/ } 
     .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-      color: #000000 !important; }
+      color: #6bb8c5 !important; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
-      color: #000000 !important; }
+      color: #6bb8c5 !important; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover, .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-        color: #136ad5 !important; }
+        color: #6bb8c5 !important; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active a {
-      color: #136ad5 !important; }
+      color: #6bb8c5 !important; }
   .sticky-wrapper .shrink {
     padding-top: 0px !important;
     padding-bottom: 0px !important; }
@@ -615,20 +615,20 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 #sticky-wrapper.is-sticky .sticky-nav {
   padding-top: 10px;
   padding-bottom: 10px;
-  background: white;
-  -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
+  background: transparent;
+  /* -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
   box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(1rem);
-  backdrop-filter: blur(1rem); }
+  backdrop-filter: blur(1rem);*/ } 
   #sticky-wrapper.is-sticky .sticky-nav .burger:before, #sticky-wrapper.is-sticky .sticky-nav .burger span, #sticky-wrapper.is-sticky .sticky-nav .burger:after {
-    background: #000000;
+    background: transparent;
     -webkit-transition: .0s all ease;
     -o-transition: .0s all ease;
     transition: .0s all ease; }
   #sticky-wrapper.is-sticky .sticky-nav .logo {
-    color: #000000 !important; }
+    color: #6bb8c5 !important; }
   #sticky-wrapper.is-sticky .sticky-nav .site-menu > li > a {
-    color: #000000 !important; }
+    color: #6bb8c5 !important; }
     #sticky-wrapper.is-sticky .sticky-nav .site-menu > li > a:hover, #sticky-wrapper.is-sticky .sticky-nav .site-menu > li > a.active {
       color: #136ad5 !important; }
   #sticky-wrapper.is-sticky .sticky-nav .site-menu > li.active a {
@@ -830,6 +830,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   padding: 30px;
   border-radius: 4px;
   text-align: center; }
+ 
+
   .feature [class^="flaticon-"],
   .feature [class^="icon-"],
   .feature [class^="uil uil-"] {
