--- a/css/ccu.css
+++ b/css/ccu.css
@@ -1,6 +1,6 @@
 .gradient-button {
     background-image: linear-gradient(to right,rgb(255, 255, 255), yellow);
-    color: black;
+    color: #6bb8c5;
     font-size: 12px;
     transition: 0.3s;
 }
@@ -15,18 +15,20 @@
   font-weight: 700;
   letter-spacing: .05rem;
     background-image: linear-gradient(to right,rgb(164, 144, 255), rgb(255, 255, 255));
-    color: white;
+    color: rgb(21, 21, 92);
 }
 .dropdown-bgc{
     
     background-color: rebeccapurple;
 }
 .reg-btn{
+    color: #6bb8c5;
     font-size: 10px;
-    border: 2px solid #04AA6D;
+    border: 2px solid #deee02 ;
 }
 .reg-btn:hover{
-    font-size: 12px;
+
+    font-size: 11px;
     transition: 0.3s;
-    border: 2px solid #deee02;
+    border: 2px solid #04AA6D;
 }
