--- a/css/style.css
+++ b/css/style.css
@@ -825,7 +825,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 .feature {
   margin-bottom: 40px;
-  border: 1px solid rgba(0, 0, 0, 0.05);
+  /* border: 1px solid rgba(0, 0, 0, 0.05); */
   background: #ffffff;
   padding: 30px;
   border-radius: 4px;
