--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       padding: 5px 20px;
       display: block;
       position: relative;
-      color: #000000; }
+      color: #a6bcff; }
       .site-mobile-menu .site-nav-wrap a:hover {
         color: #136ad5; }
     .site-mobile-menu .site-nav-wrap li {
