--- a/css/ccu.css
+++ b/css/ccu.css
@@ -35,11 +35,19 @@
 .hworks{
 
     display: grid;
-    grid-template-columns: 1fr 1fr;;
+    grid-template-columns: 1fr 1fr;
     grid-auto-flow: dense;
     justify-content: center;
     
 }
+@media screen and (max-width: 600px) {
+    .hworks {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-flow: dense;
+        justify-content: center;
+    }
+  }
 .review{
  background-color: white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
