--- a/css/style.css
+++ b/css/style.css
@@ -1630,7 +1630,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   margin-bottom: 30px; }
 
 .site-footer {
-  background: #136ad5;
+  background: #222222;
   font-size: 14px;
   color: #ffffff;
   padding: 70px 0; }
