--- a/css/ccu.css
+++ b/css/ccu.css
@@ -576,3 +576,15 @@ z-index: 1; position: absolute;
     background-color: #ffffff;
     box-shadow: #6bb8c5 0px 0px 10px 0px;
 }
+.map2{
+    width: 500px;
+    height:400px;
+
+}
+@media screen and (max-width: 600px) {
+    .map2 {
+        width: 100%;
+        height:400px;
+    }
+    
+}
