--- a/css/ccu.css
+++ b/css/ccu.css
@@ -1,21 +1,8 @@
 .gradient-button {
-    background-image: linear-gradient(to right,rgb(255, 255, 255), yellow);
-    color: #6bb8c5;
+    background-color: #ffd700;
+    color: black;
     font-size: 12px;
     transition: 0.3s;
-}
-.gradient-button:hover {
-    padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  border-radius: 30px;
-  font-size: 11px;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: .05rem;
-    background-image: linear-gradient(to right,rgb(164, 144, 255), rgb(255, 255, 255));
-    color: rgb(21, 21, 92);
 }
 .dropdown-bgc{
     
@@ -587,4 +574,118 @@ z-index: 1; position: absolute;
         height:400px;
     }
     
+}
+
+.all-services-hero{
+    width: 100%;
+    height: 900px;
+    background-image: linear-gradient(to top right, #1a36b3, #01e2da);
+    border-bottom-left-radius: 40%;
+    /* transform: matrix(1.5, -0.3, 0, 1, 0, 0); */
+    position: absolute;
+}
+.all-services-hero img{
+    width: 300px;
+    
+}
+.all-services-hero1 , h1{
+    font-weight: 900 ;
+    font-size: 50px;
+    color: white;
+}
+
+.all-services-hero1{
+    align-self: flex-end;
+    
+
+}
+.all-services-hero1 img{
+    margin-top: 50px;
+}
+.all-services-hero-content{
+    position: relative;
+    height: 600px;
+}
+.btn-blue{
+    background-color: #081729;
+    color: white;
+}
+.btn-small-text{
+font-size: 9px;
+}
+.btn-small-text1{
+    font-size: 8px;
+    font-weight: 300;
+    }
+.allservice-hr{
+    margin-top: 200px;
+    width: 100%;
+    height: 15px;
+    background-color: #1a36b3;
+}
+
+.all-service-content-2{
+
+    box-sizing: border-box;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.548)0px 3px 6px;
+    border-radius: 10px;
+
+}
+.all-service-content-3{
+    width: 100%;
+    height: 600px;
+    background-image: linear-gradient(to top right, #1a36b3, #01e2da);
+    transform: matrix(1.5, -0.3, 0, 1, 0, 0);
+    position: absolute;
+    z-index:-1;
+}
+.card1{
+    margin-top: 280px;
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.548)0px 3px 6px;
+    border-radius: 20px;
+    padding: 70px 0;
+
+   
+}
+.card2{
+    margin-top: 210px;
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.548)0px 3px 6px;
+    border-radius: 20px;
+    padding: 70px 0;
+
+   
+}
+.card3{
+    margin-top: 140px;
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.548)0px 3px 6px;
+    border-radius: 20px;
+    padding: 70px 0;
+
+   
+}
+.card4{
+    margin-top: 70px;
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.548)0px 3px 6px;
+    border-radius: 20px;
+    padding: 70px 0;
+
+   
+}
+.card1,.card2,.card3,.card4 p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #000000;
 }
