--- a/css/style.css
+++ b/css/style.css
@@ -614,8 +614,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 #sticky-wrapper.is-sticky .sticky-nav {
   padding-top: 10px;
-  padding-bottom: 10px;
-  background: transparent;
+  padding-bottom: 20px;
+  background: #746bc565;
   /* -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
   box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
   -webkit-backdrop-filter: blur(1rem);
@@ -740,7 +740,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     font-weight: 700;
     letter-spacing: .1rem; }
   .untree_co-hero .heading, .bg-img .heading {
-    font-size: 60px;
+    font-size: 100px;
     font-weight: 700;
     line-height: 1.4; }
 
