--- a/css/ccu.css
+++ b/css/ccu.css
@@ -684,8 +684,8 @@ font-size: 9px;
 
    
 }
-.card1,.card2,.card3,.card4 p{
-    font-size: 14px;
+.card1, .card2, .card3, .card4{
+    font-size: 16px;
     font-weight: 600;
     color: #000000;
 }
