--- a/css/ccu.css
+++ b/css/ccu.css
@@ -437,10 +437,10 @@ z-index: 1; position: absolute;
 }
 
 
-.fund-recovery{
+/* .fund-recovery{
     position: absolute;
     width: 100%;
-    height: 600px;
+    height: 700px;
     background-image: linear-gradient(to top right, #1a36b3, #01e2da);
     transform: matrix(1.5, 0, 0, 1, 0, 0);
     
@@ -456,7 +456,7 @@ z-index: 1; position: absolute;
         border-bottom: 1000px solid #2472cc;
     }
     
-}
+} */
 .fund-img{
     width: 100%;
 }
@@ -467,7 +467,11 @@ z-index: 1; position: absolute;
     
 }
 .fund-middle{
-    margin-top: 400px;
+    margin-top: 50px;
+    padding: 50px;
+    background-image: linear-gradient(to top right, #1a36b3, #01e2da);
+    
+
 }
 @media screen and (max-width: 600px) {
     .fund-middle {
